fix: fixed banner size and cropping bottom

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,27 +4,28 @@
 
 @layer base {
   :root {
-    --foreground: 255, 255, 255;
-    --background: 0, 0, 0;
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
   }
 
   html {
-    @apply scroll-smooth;
-    perspective: 1px;
-    perspective-origin: 0 0;
-    overflow-x: hidden;
+    scroll-behavior: smooth;
     height: 100%;
-    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    scroll-padding-top: 80px;
   }
 
   body {
-    color: rgb(var(--foreground));
-    background: rgb(var(--background));
-    transform-style: preserve-3d;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     min-height: 100%;
-    overflow-x: hidden;
+    position: relative;
+    color: rgb(var(--foreground-rgb));
+    background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
   }
 }
 
